--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Xfinity Stream App</h2>
+                  <h2>Xfinity Stream mobile app</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/stream.png" alt="">
                   <p>I automated the quality assurance testing suite for Comcast's Xfinity stream Android application. Using the Calabash framework I was able to port more than 25 tests, freeing our QA engineers to work on tests that couldnt yet be automated.</p>
@@ -320,7 +320,7 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Xfinity Stream web app</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/browser.png" alt="">
                   <p>Here I also automated another test suite for Comcast, but this time using Capybara for their web application. All of Comcast's webapp tests are now fully automated.</p>
@@ -363,7 +363,7 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Xfinity STB UI</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/STB.png" alt="">
                   <p>This project entailed automating new features for the Xfinity user interface of all current Comcast set-top boxes. Using our Redis database to match values, I created tests for everything from the Guide to User Settings to the On-Demand sections.</p>
